--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	<title>Document</title>
 </head>
 <body>
-<header class="header"></header>
+<header class="header">
+	<div class="header__logo">
+		<a href="#">Logo</a>
+	</div>
+	<div class="header__nav"></div>
+
+</header>
 <main class="main"></main>
 <footer class="footer"></footer>
 </body>
