--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<div class="header__nav"></div>
 
 </header>
-<main class="main"></main>
+<main class="main">
+	<h1>Hello world</h1>
+</main>
 <footer class="footer"></footer>
 </body>
 </html>
