--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </header>
 <main class="main">
-	<h1></h1>
+	<h1>Transform Challenges into Triumphs!</h1>
 </main>
 <footer class="footer"></footer>
 </body>
